--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tiệm Hoa ChinChin | Floral & Decor</title>
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <script>
     if (typeof global === 'undefined') {
       window.global = window;
